cmake_minimum_required(VERSION 3.17)
project(cppcom)
set(CMAKE_CXX_STANDARD 20)
add_library(MSMD5Encoder inc/MSMD5Encoder.h src/MSMD5Encoder.c)
add_library(MSB64Decoder inc/MSB64Decoder.h src/MSB64Decoder.c)
add_library(MSB64Encoder inc/MSB64Encoder.h src/MSB64Encoder.c)
add_library(Communicates inc/Communicates.h src/Communicates.cpp)
add_library(UsartDecives inc/UsartDecives.h src/UsartDecives.cpp)
add_library(ModuleSerial inc/ModuleSerial.h src/ModuleSerial.cpp)
add_executable(cppcom main.cpp)
